[gd_scene load_steps=2 format=3 uid="uid://bl4ylcst48qvq"]

[ext_resource type="Script" uid="uid://c42fppgriub5q" path="res://UI/lobby_ui.gd" id="1_52x5r"]

[node name="LobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52x5r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="."]
layout_mode = 1
offset_left = 47.0
offset_top = 33.0
offset_right = 163.0
offset_bottom = 65.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 1
offset_left = 175.0
offset_top = 32.0
offset_right = 291.0
offset_bottom = 64.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 1
offset_left = 114.0
offset_top = 75.0
offset_right = 230.0
offset_bottom = 110.0
text = "Start"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
